[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/module_input.gd" type="Script" id=1]
[ext_resource path="res://scenes/body_modules/status.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/body_modules/clinger.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/body_modules/drawer.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/body_modules/tutorial.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/body_modules/mover.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/player.gd" type="Script" id=7]
[ext_resource path="res://scenes/body_modules/particles.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/body_modules/shaper.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/body_modules/face.tscn" type="PackedScene" id=11]

[sub_resource type="PhysicsMaterial" id=1]

[node name="Body" type="RigidBody2D" groups=["Players"]]
position = Vector2( 435, 200 )
collision_layer = 5
collision_mask = 5
physics_material_override = SubResource( 1 )
gravity_scale = 5.0
contacts_reported = 3
contact_monitor = true
can_sleep = false
script = ExtResource( 7 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

[node name="Status" parent="." instance=ExtResource( 2 )]

[node name="Shaper" parent="." instance=ExtResource( 10 )]

[node name="Drawer" parent="." instance=ExtResource( 4 )]

[node name="Input" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Mover" parent="." instance=ExtResource( 6 )]

[node name="Clinger" parent="." instance=ExtResource( 3 )]

[node name="Tutorial" parent="." instance=ExtResource( 5 )]

[node name="Face" parent="." instance=ExtResource( 11 )]

[node name="Particles" parent="." instance=ExtResource( 8 )]

[connection signal="double_button" from="Input" to="Mover" method="_on_Input_double_button"]
[connection signal="move_left" from="Input" to="Mover" method="_on_Input_move_left"]
[connection signal="move_left_released" from="Input" to="Mover" method="_on_Input_move_left_released"]
[connection signal="move_right" from="Input" to="Mover" method="_on_Input_move_right"]
[connection signal="move_right_released" from="Input" to="Mover" method="_on_Input_move_right_released"]
